ipc/ipdl/test/ipdl/ok/media.ipdl
sync protocol media {
child:
    async __delete__();

};
