ipc/ipdl/test/ipdl/error/messageNoDirection.ipdl
//error: missing message direction

protocol messageNoDirection {
    async NoDirection();
};
